# glyphboard-backend

./: .gitignore  Dockerfile  README.md  config.yml  pyproject.toml  requirements.in  requirements.txt  server.py
data/febrl/: febrl.22032018.feature.json  febrl.22032018.meta.json  febrl.22032018.position.tsne.json  febrl.22032018.schema.json
data/geo/: geo.06112018.feature.json  geo.06112018.meta.json  geo.06112018.schema.json
data/geoGroups/: geoGroups.11042019.position.epsg.json  geoGroups.11042019.position.pca.json  geoGroups.11042019.position.tsne.json  geoGroups.11042019.position.tsnestreet.json  geoGroups.11042019.schema.json
data/movielens/: movielens.28092017.feature.json  movielens.28092017.meta.json  movielens.28092017.position.pca.json  movielens.28092017.position.tsne.json  movielens.28092017.schema.json
webserviceutils/: __init__.py  data.py  security.py
