[tool.poetry]
name = "glyphboard-backend"
version = "0.1.0"
description = "A small python backend implementing Glyphboard API"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
scikit-learn = "^0.24.2"
Flask-Jsonpify = "^1.5.0"
Flask-Cors = "^3.0.10"
pandas = "^1.2.4"
PyYAML = "^5.4.1"
sklearn = "^0.0"
numpy = "^1.20.3"
SQLAlchemy = "^1.4.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
